force-app/main/default/objects/PricebookEntry/fields/Active_Product__c.field-meta.xml
<CustomField>
    <fullName>Active_Product__c</fullName>
    <formula>Product2.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Product</label>
    <type>Checkbox</type>
</CustomField>