force-app/main/default/objects/PricebookEntry/fields/Day_Text__c.field-meta.xml
<CustomField>
    <fullName>Day_Text__c</fullName>
    <label>Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>